# src/main/java/com/fivelettersgame/dto/WordDtoOutput.java
@@ -1,16 +1,0 @@
-package com.fivelettersgame.dto;
-
-public class WordDtoOutput {
-    private String word;
-
-    public WordDtoOutput() {
-    }
-
-    public WordDtoOutput(String word) {
-        this.word = word;
-    }
-
-    public String getWord() {
-        return word;
-    }
-}
